--- a/src/styles/Register2.scss
+++ b/src/styles/Register2.scss
@@ -14,3 +14,21 @@
   box-sizing: border-box;
   padding: 10px;
 }
+
+.interests{
+  width: 100%;
+  display: flex;
+  margin-bottom: 55px;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.hobby{
+  padding: 10px;
+  height: 40px;
+  border-radius: 10px;
+
+  &:active{
+    opacity: 0.7;
+  }
+}
