--- a/src/components/Messenger2/App.scss
+++ b/src/components/Messenger2/App.scss
@@ -1,232 +1,45 @@
-.OldChat {
-    margin: 0 auto;
-    margin-top: 10px;
-    max-width: 80vw;
-    display: grid;
-    grid-template-columns: 4fr 8fr;
-    gap: 10px;
-  }
-  
-  .left {
-    padding: 10px;
-    height: 85vh;
+.companion{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+
+  &-info,&-buttons{
     display: flex;
     flex-direction: column;
-    box-sizing: border-box;
-    border: 2px solid #086fa1;
-    border-radius: 10px;
-    .settings {
-      margin-bottom: 20px;
-      padding-bottom: 20px;
-      border-bottom: 2px solid black;
-      button {
-        margin: 5px;
-        font-family: inherit;
-      }
-    }
-  
-    .chats {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      &-header{
-        font-weight: 800;
-        font-size: 40px;
-        line-height: 56px;
-        text-align: center;
-      }
-      &-find{
-        margin-top: 10px;
-        box-sizing: border-box;
-        width: 80%;
-        height: 56px;
-        border-radius: 10px;
-        border: 1px solid #D7D7D7;
-        padding-left: 50px;
-        position: relative;
+    align-items: center;
+  }
 
-        &::before{
-          content: "";
-          display: block;
-          position: absolute;
-          width: 18px;
-          height: 18px;
-          left: 10px;
-          background-image: url("../../img/union.svg");
-        }
-      }
-      overflow: auto;
-      .chats-list {
-        width: 80%;
-        margin: 20px auto 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        .chat {
-          box-sizing: border-box;
-          margin-bottom: 20px;
-          width: 100%;
-          height: 70px;
-          padding: 5px;
-          border: 1px solid gray;
-          border-radius: 10px;
-          &:hover {
-            cursor: pointer;
-            opacity: 0.7;
-            background-color: lightgray;
-          }
-          .user {
-            color: blue;
-          }
+  h2{
+    font-weight: 800;
+    font-size: 40px;
+  }
 
-          .last-sender{
-            margin: 5px 0 5px 15px;
-            font-weight: 700;
-            font-size: 18px;
-          }
+  img{
+    margin-top: 30px;
+    width: 164px;
+    height: 164px;
+  }
 
-          .last-message{
-            margin: 0 0 0 15px;
-          }
-        }
-      }
+  .name{
+    font-weight: 500;
+    font-size: 26px;
+    margin: 30px 0 0;
+  }
+
+  .age{
+    font-weight: 400;
+    font-size: 20px;
+    margin: 30px 0 20px;
+  }
+
+  .btn{
+    margin-bottom: 30px;
+    font-size: 22px;
+    &:first-child{
+      background-color: #ed7c7c;
+      padding: 0 30px;
     }
   }
-  
-  .right {
-    padding: 10px;
-    height: 85vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-    border: 2px solid black;
-    border-radius: 10px;
-    text-align: center;
-    .chat {
-      overflow-y: auto;
-      margin-bottom: 10px;
-      ul {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        list-style: none;
-        li {
-          margin: 5px 5px 0 0;
-          padding: 5px 10px;
-          padding-left: 32px;
-          position: relative;
-          word-break: break-all;
-          border-radius: 10px;
-          background-color: rgb(231, 229, 229);
-          &.currentUserMessage {
-            align-self: flex-end;
-            background-color: #3ca0d0;
-          }
-          .name {
-            color: blue;
-          }
-  
-          .buttonQuote {
-            position: absolute;
-            top: 0;
-            left: 0;
-          }
-          .tooltipI {
-            color: red;
-          }
-          .tooltipName {
-            text-transform: none;
-            color: #800080;
-          }
-          .tooltipButton {
-            padding: 0 !important;
-            justify-content: center !important;
-            background-color: silver;
-          }
-        }
-  
-        .inputMessageQuote {
-          align-self: center;
-          position: relative;
-          .tooltipI {
-            color: red;
-          }
-          .tooltipName {
-            text-transform: none;
-            color: #800080;
-          }
-          .tooltipButton {
-            padding: 0 !important;
-            justify-content: center !important;
-            background-color: silver;
-          }
-        }
-      }
-    }
-  
-    .inputMessage {
-      position: relative;
-      .inputWrapper {
-        display: flex;
-        justify-content: center;
-        .input {
-          width: 50%;
-        }
-      }
-  
-      button {
-        margin: 5px;
-        font-family: inherit;
-      }
-  
-      .wrapperMedia {
-        position: absolute;
-        bottom: 90px;
-        right: 0;
-        .inputMessageMedia {
-          padding: 20px;
-          border: 1px solid blue;
-          border-radius: 10px;
-          background-color: white;
-        }
-      }
-    }
-  }
-  
-  @media (max-width: 640px) {
-    .OldChat {
-      margin-top: 0;
-      max-width: 100%;
-      grid-template-columns: 1fr;
-  
-      .left {
-        padding-bottom: 0;
-        height: min-content;
-        border: none;
-        .settings {
-          margin-bottom: 0;
-          text-align: center;
-        }
-        .chats {
-          display: none;
-        }
-      }
-  
-      .right {
-        padding-top: 0;
-        height: 70vh;
-        border: none;
-        .inputWrapper {
-          flex-direction: column;
-          align-items: center;
-          .input {
-            width: 80%;
-          }
-        }
-      }
-    }
-  }
+}
