--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -11,7 +11,6 @@
 .nav-list{
   margin: 0;
   padding: 0;
-  justify-content: space-between;
 }
 
 .nav-item{
@@ -21,7 +20,7 @@
   text-align: center;
 
   &:first-child{
-    margin: 0;
+    margin-top: 0;
   }
 }
 
