--- a/src/styles/SignIn.scss
+++ b/src/styles/SignIn.scss
@@ -1,5 +1,4 @@
 .form{
-  flex: 1 0 auto;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -22,4 +21,8 @@
       margin-top: 20px;
     }
   }
+}
+
+.login-button{
+  margin-top: 20px;
 }
